adding the graph

--- a/tensorflow/tensorflow1example.ipynb
+++ b/tensorflow/tensorflow1example.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -187,25 +187,119 @@
      "output_type": "stream",
      "text": [
       "30\n",
+      "\n",
+      "\n",
       "[[10 10 10]\n",
       " [10 10 10]\n",
       " [10 10 10]]\n",
+      "\n",
+      "\n",
       "[[ 0.  0.]\n",
       " [ 0.  0.]]\n",
+      "\n",
+      "\n",
       "[[ 1.  1.  1.  1.]\n",
       " [ 1.  1.  1.  1.]\n",
       " [ 1.  1.  1.  1.]\n",
       " [ 1.  1.  1.  1.]]\n",
-      "[[-0.83568788  0.29208723 -0.19023316  0.22286493]\n",
-      " [ 0.20256713 -3.00012255  0.02754926 -0.37865573]\n",
-      " [ 0.06090693 -0.39712474  0.51877463 -0.42876679]\n",
-      " [ 1.03472698  0.14685486 -0.64521956 -0.67330509]]\n"
+      "\n",
+      "\n",
+      "[[ 0.87519997 -0.51784974  1.00517964 -2.08141637]\n",
+      " [-1.07569742 -0.28428853 -0.45011777  1.21002364]\n",
+      " [-0.78687102  0.07720553 -0.72633415  0.42783451]\n",
+      " [ 1.14623666  0.46128789  0.04829095  1.6388427 ]]\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "for ops in my_constant:\n",
-    "    print(session.run(ops))"
+    "    print(session.run(ops))\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Tensor.get_shape of <tf.Tensor 'Const_20:0' shape=(2, 2) dtype=int32>>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=tf.constant([[1,2],[3,4]])\n",
+    "a.get_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Tensor.get_shape of <tf.Tensor 'Const_22:0' shape=(2, 1) dtype=int32>>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b= tf.constant([[1],[2]])\n",
+    "b.get_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result=tf.matmul(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5],\n",
+       "       [11]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# The above code is an example of multiplication of arraays in tensorflow"
    ]
   },
   {
